# deploywhisper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeployWhisper_Architecture.docx  DeployWhisper_PRD.docx  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  alembic.ini  api_server.py  app.py  cli.py  config.py  docker-compose.yml  docs_README.md  logging_config.py  package-lock.json  package.json  playwright.config.cjs  playwright.live.config.cjs  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
_bmad-output/: project-context.md
analysis/: blast_radius.py  env_classifier.py  incident_matcher.py  interaction_risk.py  risk_engine.py  risk_scorer.py  rollback_planner.py
api/: dependencies.py  errors.py  schemas.py
cli/: analyze.py
data/: deploywhisper.db  skill-analytics.json
docs/: ci-advisory-consumption.md  ci-secrets-checklist.md  ci.md  deployment-history.md  evidence-model.md  github-action.md  github-app-self-hosted-setup.md  github-app.md  incident-import.md  kubernetes-live-state-connector.md  outcome-linking.md  project-workspaces.md  review-keyboard-navigation.md  reviewer-feedback.md  sample-incident-pack.md  scanner-imports.md  terraform-state-connector.md  ui-migration-plan.md  verdict-card-scan-test.md  workflow-adapter-output-contract.md
evidence/: __init__.py  extractor.py  mappers.py  models.py
frontend/: index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
integrations/: __init__.py
llm/: narrator.py  prompts.py  providers.py  skill_context.py
migrations/: env.py
(+427 files in other folders)
