[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "deploywhisper"
version = "1.0.0"
description = "AI-powered pre-deployment risk intelligence for infrastructure changes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nicegui==3.10.0",
  "fastapi==0.135.2",
  "uvicorn==0.35.0",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
  "pydantic==2.12.2",
  "litellm==1.83.0",
  "pyyaml==6.0.3",
  "ruamel.yaml==0.18.16",
  "deepdiff==8.6.2",
  "python-hcl2==7.3.1",
  "python-dotenv==1.2.2",
]

[project.scripts]
deploywhisper = "cli.analyze:main"

[tool.hatch.build.targets.wheel]
packages = [
  "api",
  "services",
  "integrations",
  "parsers",
  "analysis",
  "evidence",
  "llm",
  "models",
  "ui",
  "cli",
]
