[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "deploywhisper"
version = "1.3.0"
description = "AI-powered pre-deployment risk intelligence for infrastructure changes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
  "pydantic==2.13.3",
  "openai==2.32.0",
  "anthropic==0.97.0",
  "google-genai==1.73.1",
  "pyyaml==6.0.3",
  "ruamel.yaml==0.19.1",
  "deepdiff==9.0.0",
  "python-hcl2==8.1.2",
  "python-dotenv==1.2.2",
]

[project.scripts]
deploywhisper = "cli.analyze:main"

[tool.hatch.build.targets.wheel]
packages = [
  "api",
  "services",
  "integrations",
  "parsers",
  "analysis",
  "evidence",
  "llm",
  "models",
  "cli",
]
